# fastapi-ca

./: README.md  alembic.ini  config.py  database.py  database_models.py  main.py  pyproject.toml
common/: messaging.py
example/ch06_02/: async_ex.py  sync_ex.py
example/ch10_01/: background_task.py
example/ch10_02/: celery_task.py
migrations/versions/: 2024_12_21_1413-767fd5ce0e81_add_user_table.py  2024_12_21_1635-12c08df65677_add_user_table.py  2024_12_25_2143-83a371256619_user_add_memo.py
user/application/: send_welcome_email_task.py  user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/db_models/: user.py
user/infra/repository/: user_repo.py
user/interface/controller/: user_controller.py
utils/: crypto.py  db_utils.py
